[docs] Update the "about" page

--- a/docs/src/pages/about.mdx
+++ b/docs/src/pages/about.mdx
@@ -1,3 +1,31 @@
 # About
 
-This is the about page! This page is shown on the navbar.
+## What is Fixpoint's vision?
+
+We believe the future of AI is multi-model, with specialized models coordinating
+together to accomplish their goals.
+
+The next big AI unlock will be AIs that can reason, with automated planning,
+prioritization, and self-checking of agent quality. But for now, the best LLM
+systems compose LLM usage with "intelligently designed" traditional computer
+programs.
+
+We want to meet AI engineers where they are now, and let them build hand-crafted
+agent networks that they control. But we also keep an eye towards the future, to
+create AI agent networks that can reason. The dream end goal: you have a
+Manager AI that picks the best agents, does task planning, and coordinates how
+the agents work together.
+
+## Who are we?
+
+We're [Dylan](https://www.linkedin.com/in/dbmikus/) and [Jakub](https://www.linkedin.com/in/jakub-cichon-14016a3b/)!
+
+We've built machine learning and data infrastructure systems for businesses
+ranging from small startups to public tech companies. We built and led the
+search infrastructure and real-time data pipelines at Oscar Health, studied and
+researched natural language processing and CS at CMU and NYU, and founded a
+Y-Combinator company together.
+
+As engineers, we're fans of open-source software because we think it's important
+that you control the core infra of your products, and that you always have the
+option to run it yourselves.
