[docs] Write "Structured Data" and "Workflows" sections

--- a/docs/src/pages/memory.mdx
+++ b/docs/src/pages/memory.mdx
@@ -45,9 +45,9 @@ something like this:
 
 ## Using memory in workflows
 
-If you LLM agents within a **workflow**, then all memories are stored for the
-workflow. Future workflow steps can query the memory bank for memories from
-earlier in the workflow, and filter by agent, or by the relevant task or step
-within the workflow.
+If you LLM agents within a [workflow](/workflows-and-durability/workflows),
+then all memories are stored for the workflow. Future workflow steps can query
+the memory bank for memories from earlier in the workflow, and filter by agent,
+or by the relevant task or step within the workflow.
 
 _code example coming soon_
