--- a/docs/src/pages/workflows-and-durability/workflows.mdx
+++ b/docs/src/pages/workflows-and-durability/workflows.mdx
@@ -11,3 +11,13 @@ There are two ways of modeling workflows:
 2. **Request/Reply workflows**: a client/server request/response model. this is
    well suited for chatbots where the workflow only advances to the next step
    after a user interaction. The Form Agent is an example of this.
+
+
+## Structured workflows
+
+_docs coming soon_
+
+
+## Request/Reply workflows
+
+_docs coming soon_
