[docs] Fix a couple of "getting started" todos

--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -86,10 +86,7 @@ support Python. You can install Fixpoint with pip:
 pip install fixpoint
 ```
 
-Then the best way to get started is to look at one of these examples:
-
-1. TODO
-2. TODO
+Then the best way to get started is to go to the [Getting Started page](/getting-started).
 
 You can also continue on to read the rest of the Fixpoint docs, or take a look
 at our [Github repo](https://github.com/gofixpoint/fixpoint/).
