--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -10,7 +10,7 @@ interactions. It needs to pick the right models and prompts for each step, and
 recover gracefully when the workflow fails partway through. Sometimes the
 workflow needs a human-in-the-loop to correct or review parts of the workflow.
 
-Fixpoint's goal is to solve these problems for you so that can focus on the
+Fixpoint's goal is to solve these problems for you so that you can focus on the
 goals of your AI and your application.
 
 ## Fixpoint's features
