--- a/docs/src/pages/workflows-and-durability/workflows.mdx
+++ b/docs/src/pages/workflows-and-durability/workflows.mdx
@@ -8,7 +8,7 @@ There are two ways of modeling workflows:
    human or external input, but mostly you can think of this like we’re running
    a sequence of code. Name inspired by
    [Structured programming](https://en.wikipedia.org/wiki/Structured_programming).
-2. **Request/Reply workflows**: a client/server request/response model. this is
+2. **Request/Reply workflows**: a client/server request/response model. This is
    well suited for chatbots where the workflow only advances to the next step
    after a user interaction. The Form Agent is an example of this.
 
